--- a/my.css
+++ b/my.css
@@ -54,6 +54,10 @@ body {
     height: 100%;
 }
 
+.rightAlignPhone {
+    text-align: right;
+}
+
 footer {
     text-align: center;
 }
@@ -66,6 +70,11 @@ footer {
     .titleImage {
         width: 75%;
     }
+
+    .textAlignContact {
+        text-align: center;
+    }
+
 }
 
 @media (max-width:767px){
