Revised About Description, Updated Images

--- a/my.css
+++ b/my.css
@@ -9,7 +9,7 @@ body {
 
 .titleContainer {
     margin-top:3em;
-    background: url("imgs/backgroundUpdated2.png");
+    background: url("imgs/backgroundUpdated2.jpg");
     background-repeat: no-repeat;
     background-size:cover;
 }
