--- a/my.css
+++ b/my.css
@@ -12,6 +12,8 @@ body {
     background: url("imgs/backgroundUpdated2.jpg");
     background-repeat: no-repeat;
     background-size:cover;
+    background-attachment: fixed;
+    background-position: center;
 }
 
 .titleCard {   
